# kazoo

./: #%2Ascratch%2A#3596jln#  .aspell.en-kazoo.pws  .aspell.en.prepl  .aspell.en.pws  .aspell.en_US-kazoo.pws  .base_branch  .editorconfig  .erlang.cookie  .gitignore  .shipyard.yml  .travis.yml  ANNOUNCEMENTS.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  Makefile.deps  Quickcall WiKI Info  README.md  SOURCE  TAGS  TEST.md  TODO  TODO.org  VERSION  big_picture.txt  build_beams.sh  circle.yml  deps.mk  docker-compose.yml  elvis.config  erlang.amf  kazoo-5693.vim  kgit  kgit-completion.bash  knm_providers.erl  kzos.erl  rebar.config  relx.config  relx.config.script  (+4 more)
.circleci/: app.config.yml  config.yml  sequential.yml  workflows.yml
amqp/: start-dev.sh
applications/: Makefile  conn-to-apps.sh  kz.mk  rebar.config  start-dev.sh  start.sh  whistle_apps_ctl
callmgr/: erl_crash.dump  start.sh
client/: erl_crash.dump  rebar.config  start-dev.sh
confs/: Makefile.whapp.sample
core/: .gitignore  Makefile  kz.mk
diagnostics/: start-dev.sh  start.sh
doc/: README.md  announcements.md  big_picture.txt  fax_sample.txt  getting_started.md  getting_used_to_multi_repo.md  index.md  init_kazoo.txt  installation.md  intro.md  mod_vlc.txt  whistle_mgmt.txt
ecallmgr/: Makefile  conn-to-ecallmgr.sh  ecallmgr_ctl  erl_crash.dump  rebar.config  start-dev.sh  start.sh
fs_conf/: freeswitch.xml
ibrowse/: Makefile  README  vsn.mk
include/: fs.hrl
lib/: Makefile  erlctl-0.3  lager_syslog-0.9.0  mochiweb-1.5.1  rabbit_common-2.8.1  rabbitmq-server  rabbitmq_erlang_client-2.3.1  rabbitmq_server-2.3.1  rebar.config
lib/exmpp-0.9.8-05-g6987a0a/c_src/: Makefile  Makefile.am  Makefile.in  Makefile.unix  Makefile.win32  exmpp_compress_zlib.c  exmpp_compress_zlib.la  exmpp_compress_zlib_la-exmpp_compress_zlib.lo  exmpp_compress_zlib_la-exmpp_driver.lo  exmpp_driver.h  exmpp_stringprep.c  exmpp_stringprep.la  exmpp_stringprep_la-exmpp_driver.lo  exmpp_stringprep_la-exmpp_stringprep.lo  exmpp_tls.c  exmpp_tls.h  exmpp_tls_openssl.c  exmpp_tls_openssl.la  exmpp_tls_openssl_la-exmpp_driver.lo  exmpp_tls_openssl_la-exmpp_tls.lo  exmpp_tls_openssl_la-exmpp_tls_openssl.lo  exmpp_xml.h  exmpp_xml_expat.c  exmpp_xml_expat_legacy.c  exmpp_xml_libxml2.c  exmpp_xml_libxml2.la  exmpp_xml_libxml2_la-exmpp_driver.lo  exmpp_xml_libxml2_la-exmpp_xml.lo  exmpp_xml_libxml2_la-exmpp_xml_libxml2.lo
lib/exmpp-0.9.8-05-g6987a0a/c_src/.deps/: exmpp_compress_zlib_la-exmpp_compress_zlib.Plo  exmpp_compress_zlib_la-exmpp_driver.Plo  exmpp_stringprep_la-exmpp_driver.Plo  exmpp_stringprep_la-exmpp_stringprep.Plo  exmpp_tls_openssl_la-exmpp_driver.Plo  exmpp_tls_openssl_la-exmpp_tls.Plo  exmpp_tls_openssl_la-exmpp_tls_openssl.Plo  exmpp_xml_libxml2_la-exmpp_driver.Plo  exmpp_xml_libxml2_la-exmpp_xml.Plo  exmpp_xml_libxml2_la-exmpp_xml_libxml2.Plo
lib/exmpp-0.9.8-05-g6987a0a/c_src/.libs/: exmpp_compress_zlib.la  exmpp_compress_zlib.lai  exmpp_stringprep.la  exmpp_stringprep.lai  exmpp_tls_openssl.la  exmpp_xml_libxml2.la
lib/exmpp-0.9.8-05-g6987a0a/src/: Emakefile  Emakefile.in  Emakefile.js  Makefile  Makefile.am  Makefile.in  Makefile.unix  Makefile.win32  exmpp_known_attrs.erl  exmpp_known_nss.erl
lib/exmpp-0.9.8-05-g6987a0a/src/client/: exmpp_client_compression.erl  exmpp_client_legacy_auth.erl  exmpp_client_pubsub.erl  exmpp_client_sasl.erl  exmpp_client_tls.erl
lib/exmpp-0.9.8-05-g6987a0a/src/compat/: EXMPP-vendor  ejabberd_socket.erl  stringprep.erl
lib/exmpp-0.9.8-05-g6987a0a/src/core/: exmpp_caps.erl  exmpp_dialback.erl  exmpp_internals.erl  exmpp_iq.erl  exmpp_jid.erl  exmpp_known_attrs.erl.awk  exmpp_known_attrs.erl.js  exmpp_known_elems.erl.awk  exmpp_known_elems.erl.js  exmpp_known_nss.erl.awk  exmpp_known_nss.erl.js  exmpp_message.erl  exmpp_presence.erl  exmpp_stringprep.erl  exmpp_sup.erl  exmpp_tls.erl  exmpp_utils.erl  exmpp_xml.erl  exmpp_xmlstream.erl
lib/exmpp-0.9.8-05-g6987a0a/src/network/: exmpp_bosh.erl  exmpp_dns.erl  exmpp_session.erl  exmpp_socket.erl
lib/exmpp-0.9.8-05-g6987a0a/src/server/: exmpp_server_sasl.erl  exmpp_server_session.erl  exmpp_server_tls.erl
log_server/: start-dev.sh
make/: Makefile.applications  Makefile.apps  Makefile.core  Makefile.deps  apps.mk  ci.mk  deps.mk  elvis.config  fmt.mk  kz.mk  more_apps.mk.default  pest.mk  splchk.mk  xref.local.config
rabbit/: rabbitmq-codegen  rabbitmq-server
rabbitmq-codegen/: .hgtags
rabbitmq-erlang-client/: .hgtags  rabbit_common.app
rabbitmq-server/: .hgtags  deps.mk
rel/: args  ci-config.ini  ci-sys.config  ci-vm.args  ci.config.ini  ci.relx.config  ci.relx.config.script  ci.relx.config.src  ci.sys.config  ci.vm.args  config-test.ini  dev.relx.config  dev.relx.config.script  dev.relx.config.src  dev.sys.config  dev.vm.args  dist.relx.config  dist.relx.config.script  dist.sys.config  dist.vm.args  kazoo  nodetool  relx.config  relx.config.script  relx.config.src  relx.patch  sys.config  test.config  vm.args
responder/: start-dev.sh  start.sh
rscmgr/: start.sh
rscrpt/: rebar.config  start-dev.sh
scripts/: .aspell.en.pws  README.md  apps-process-count.sh  apps_of_app.escript  build_beams.sh  build_tags.sh  bump-copyright-year.py  bump-copyright-year.sh  calculate-dep-targets.escript  check-admonitions.escript  check-app-registered.sh  check-changed.bash  check-dialyzer.escript  check-git-status.bash  check-loglines.bash  check-ref-docs.bash  check-release-startup.sh  check-scripts-readme.bash  check-spelling.bash  check-spelling.sh  check-stacktrace.py  check-unstaged.bash  check-whitespace.sh  check-xref.escript  circleci-build-erlang.sh  circleci.bash  clean_moved_libs.sh  code_checks.bash  conn-to-apps.sh  conn-to-ecallmgr.sh  convert_org_files.bash  cover.escript  crash-apps.sh  crash-ecallmgr.sh  dev-exec-mfa.sh  dev-start-apps.sh  dev-start-ecallmgr.sh  dev-start-node.sh  dialyze-changed.bash  dialyze-usage.bash  (+65 more)
src/: freeswitch.erl  freeswitch_xml.hrl  whistle_amqp.hrl  whistle_api.erl  whistle_api.hrl  whistle_util.erl
system_media/: README  list_missing.sh  prompts.txt
(+13776 files in other folders)
